# fast-nixpkgs-tracker

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  main.rs  pull.rs  redis_database.rs  web.rs
