[package]
name = "fast_nixpkgs_tracker"
version = "0.1.0"
edition = "2021"

[dependencies]
git2 = "0.19.0"
actix-web = "4"
state = "0.6.0"
serde = { version = "1.0", features = ["derive"] }
redis = { version = "0.23.0", features = ["tls-native-tls"] }
octocrab = "0.38.0"
reqwest = { version = "0.12.5", features = ["json", "gzip", "deflate"] }
serde_json = "1.0.120"
clap = "4.5.9"
signal-hook = { version = "0.3.4", features = ["extended-siginfo"] }
ctrlc = "3.4"
actix-cors = "0.7.0"
jsonwebtoken = "9.3.0"
